# learning-space

./: .gitignore  Standards-and-Specifications.md
C-and-C++/: BinaryAnalysis.md  Macros.md  bit-tricks.md  clang-toolchains.md  encountered-error-list.md  gdb-debugging.md  msvc-related.md  optimizing-cpp-code.md  profiling.md  resources.md  vardic(unlimited function arguments).cpp
C-and-C++/builds-and-build-systems/: cmake-notes.md  cmake.md
C-and-C++/builds-and-build-systems/cmake-indepth/section-1-executables/: .clangd  CMakeLists.txt  config_file  main.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-2-adding-library/: CMakeLists.txt  config_file  main.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-2-adding-library/MathFunctions/: CMakeLists.txt  Foo.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-2.5-optional-library/: CMakeLists.txt  config_file  main.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-2.5-optional-library/MathFunctions/: CMakeLists.txt  Foo.cpp  mypow.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-3-library-usesage-requirement/: CMakeLists.txt
C-and-C++/builds-and-build-systems/cmake-indepth/section-3-library-usesage-requirement/MathFunctions/: CMakeLists.txt  Foo.hpp  mysquared.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-3.5-normal-adding-library-with-usage-requirement/: .clangd  CMakeLists.txt  makefile
C-and-C++/builds-and-build-systems/cmake-indepth/section-3.5-normal-adding-library-with-usage-requirement/MathFunctions/: CMakeLists.txt  Foo.hpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-4-library-installation/: .clangd  CMakeLists.txt  main.cpp
C-and-C++/builds-and-build-systems/cmake-indepth/section-4-library-installation/MathFunctions/: .clangd  CMakeLists.txt  Foo.cpp  MathFunctions.hpp  mypow.cpp  mysquared.cpp
C-and-C++/concurrency-and-multithreading/: async.cpp  concurrency.md  concurrency2.md  conditional-variables.cpp  intro-to-multithreading-in-cpp20.md  main.cpp  multi.cpp  queue-test.cpp  sum-data-race.cpp
C-and-C++/game-dev/: sfml-dep-script.sh
C-and-C++/low-level-implementations/: sources.md
C-and-C++/template-meta-programming/: 00-Metaprogramming.md  01-writing-metafunctions.md  02-vardic-template.md  Sources.txt  compile-time-polymorphism.md  main-01.cpp  main-02.cpp  main-03.cpp
CalculationScripts/FDT/: experimental-statistics.txt  fdt.py  finish_times.json  patient_age.json
Java/: java-oop-notes.md
JavaScript/fastify-crud-api/: package.json
ML/: LinearRegressionVSLogisticRegressio.md  LinearRegressionVSLogisticRegression.md  NeuralNetworks.md  ProblemsInMachineLearning.md  TypesOfMachineLearning.md  WatchList.md  pytorch-related.md
android-development/: android-studio.md  native.md
android-development/DotNetMaui/: .gitignore  TO-STUDY.md  basics.md  installation.md
android-development/Java-11-JNI-Docs/: Examples.md  Java Native Interface Specification_ 1 - Introduction.html  Java Native Interface Specification_ 2 - Design Overview.html  Java Native Interface Specification_ 3 - JNI Types and Data Structures.html  Java Native Interface Specification_ 4 - JNI Functions.html  Java Native Interface Specification_ 5 - The Invocation API.html  source.txt
android-development/Java-17-JNI-Docs/: Java Native Interface Specification_ 1 - Introduction.html  Java Native Interface Specification_ 2 - Design Overview.html  Java Native Interface Specification_ 3 - JNI Types and Data Structures.html  Java Native Interface Specification_ 4 - JNI Functions.html  Java Native Interface Specification_ 5 - The Invocation API.html
databases/: MariaDB-notes.md  install.md
design-patterns/: SOLID-principles.md  application-logic.md  design-patterns-gang-of-four.md
dotnet/: .gitignore  VScode-plus-Unity-Setup.md  dotnet-cli.md  install.md
go/: resources.txt
go/official-tutorial/: OfficialTutorial.md  installation.md  used-libs.md
go/practice/: multable.go  multiple-alloc.go
math/: Circles-Analytical-Geometry.MD  Ellipse.md  Equalities.md  Equations.md  Factoring-Polynomials.md  Hyperbola.md  Lines-Analytical-Geometry.MD  Parabola.md  align-multiple-equations.md  math-indexing.md  polynomial-degree-names.md  references.md
myenv/: .clang-format  .clangd  settings.json  sublime-text-keybindings.json  sublime-text-user-settings.json
notes/: books.md  compressing-and-extracting-files-in-terminal.md  download-file-using-terminal.md  game-theory-games.md  gh-markdown-sources.md  git.md  markdown-to-pdf.md  npm-and-yarn.md  ssh.md  starting-stopping-services-ubuntu.md
notes/linux/: bash-scripting.md  bash-utils.md  bash.sh  formatting-flash-drives.md
rust/: .gitignore  Rustlang.md  unusual-rust-jargon.md
rust/01-basics/: data-types.md  functions.md  range.md
rust/02-ownership-borrowing-references/: 01-ownership.md
rust/03-struct/: 01-struct.md  02-methods.md
rust/04-enums/: 01-enums.md  02-match.md
rust/05-packages-crates-modules/: 00-intro.md  01-packages-and-crates.md  02-module-scope-privacy.md  05-separating-modules-to-different-files.md
rust/06-collections/: 01-vectors.md  02-strings.md
rust/07-error-handling/: 01-unrecoverable-err.md  03-to-panic-or-not-panic.md
rust/08-generics-types-lifetimes/: 01-generic-data-types.md  02-traits-shared-behavior.md  03-validating-references-with-lifetimes.md
rust/basics/: control-flow.md  error-handling.md  modules.md  rust-style.md  variables.md
rust/collections/: 00-collections.md  03-hash-maps.md
rust/enums/: 03-if-let.md
rust/error-handling/: 00-error-handling.md  02-recoverable-err.md
rust/generics-types-lifetimes/: 03-validating-references-with-lifetimes.md
rust/ownership-borrowing-references/: 02-borrowing-and-reference.md  03-slices.md
rust/packages-crates-modules/: 03-paths-for-referring-to-an-item-in-module-tree.md
rust/standard-library/: InputOutput.md  strings.md
rust/toolchains/: basics.md  perf-related.md
web-dev/: advance-css-selector.md  debugging.md  deploy.md  free-digital-CA.md  jquery.md  reactjs.md
(+65 files in other folders)
